CFOUTSTD-42: Enable and start services

--- a/roles/httpd/tasks/main.yml
+++ b/roles/httpd/tasks/main.yml
@@ -5,6 +5,17 @@
     state: latest
   with_items:
     - httpd
+    - mod_ssl
+  tags:
+    - httpd
+  become: true
+
+- name: Enable and start httpd service
+  systemd:
+    name: httpd
+    enabled: yes
+    masked: no
+    state: started
   tags:
     - httpd
   become: true
