--- a/roles/phpstorm/tasks/main.yml
+++ b/roles/phpstorm/tasks/main.yml
@@ -38,3 +38,10 @@
     state: absent
   tags:
     - phpstorm
+
+- name: Copy menu launcher
+  copy:
+    src: jetbrains-phpstorm.desktop
+    dest: "{{ home_directory }}/.local/share/applications/jetbrains-phpstorm.desktop"
+  tags:
+    - phpstorm
