CFOUTSTD-42: Use contrib packages

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -10,12 +10,22 @@
   tags:
     - always
 
-- name: Enable amazon-linux-extras packages
-  shell: amazon-linux-extras enable {{ item }}
+- name: Enable contrib repository
+  yum:
+    name: "{{ item }}"
+    update_cache: yes
+    state: latest
   with_items:
-    - httpd_modules
-    - lamp-mariadb10.2-php7.2
-    - php7.2
+    - https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+    - http://rpms.remirepo.net/enterprise/remi-release-7.rpm
+  become: true
+
+- name: Increase contrib repository priority
+  ini_file:
+    path: /etc/yum.repos.d/remi-{{ php_version }}.repo
+    section: remi-{{ php_version }}
+    option: priority
+    value: 9
   become: true
 
 - name: Install common packages
