CFOUTSTD-42: Make sure we install the specified PHP version only

--- a/roles/php/tasks/main.yml
+++ b/roles/php/tasks/main.yml
@@ -4,7 +4,7 @@
     update_cache: yes
     state: latest
   with_items:
-    - php
+    - "{{ php_version }}"
     - "{{ php_version }}-php-bcmath"
     - "{{ php_version }}-php-cli"
     - "{{ php_version }}-php-common"
