--- a/roles/composer/tasks/main.yml
+++ b/roles/composer/tasks/main.yml
@@ -24,7 +24,7 @@
     - composer
 
 - name: Install Composer
-  command: 'php /tmp/composer-installer.php --install-dir="{{ composer_path }}" --filename="composer"'
+  command: '{{ php_version }} /tmp/composer-installer.php --install-dir="{{ composer_path }}" --filename="composer"'
   when: not __composer_bin.stat.exists
   tags:
     - composer
