--- a/roles/phpstorm/defaults/main.yml
+++ b/roles/phpstorm/defaults/main.yml
@@ -1,2 +1,5 @@
-phpstorm_path: /opt/phpstorm
-phpstorm_bin: /opt/phpstorm/PhpStorm-192.6262.66/bin/phpstorm.sh
+phpstorm_version: "PhpStorm-193.6015.48"
+phpstorm_download_url: "https://download.jetbrains.com/webide/PhpStorm-2019.3.2.tar.gz"
+phpstorm_checksum: "sha256:95622def1748d18c8f72c6ba7f687853f0a21d436338d1ef5a902512339b160b"
+phpstorm_path: "{{ home_directory }}/.phpstorm"
+phpstorm_bin: "{{ phpstorm_path }}/{{ phpstorm_version }}/bin/phpstorm.sh"
