Create launcher folder

--- a/roles/phpstorm/tasks/main.yml
+++ b/roles/phpstorm/tasks/main.yml
@@ -37,6 +37,13 @@
   tags:
     - phpstorm
 
+- name: Ensure launcher folder exists
+  file:
+    path: "{{ home_directory }}/.local/share/applications"
+    state: directory
+  tags:
+    - phpstorm
+
 - name: Copy launcher
   template:
     src: jetbrains-phpstorm.desktop.j2
