--- a/roles/docker-compose/defaults/main.yml
+++ b/roles/docker-compose/defaults/main.yml
@@ -1,1 +1,3 @@
-docker_compose_bin: /usr/local/bin/docker-compose
+docker_compose_path: "{{ home_directory }}/.local/bin"
+docker_compose_bin: "{{ home_directory }}/.local/bin/docker-compose"
+docker_compose_version: "1.27.4"
