DSOCC-1767: Fix dependency issue

--- a/roles/php/tasks/main.yml
+++ b/roles/php/tasks/main.yml
@@ -3,6 +3,7 @@
     name: "{{ item }}"
     update_cache: yes
     state: latest
+    disable_plugin: priorities
   with_items:
     - "{{ php_version }}"
     - "{{ php_version }}-php-bcmath"
