--- a/roles/phpstorm/defaults/main.yml
+++ b/roles/phpstorm/defaults/main.yml
@@ -1,5 +1,5 @@
-phpstorm_version: "PhpStorm-202.6948.87"
-phpstorm_download_url: "https://download.jetbrains.com/webide/PhpStorm-2020.2.1.tar.gz"
-phpstorm_checksum: "sha256:e912fea4c145d65f15cabe2e807553451e10614f9a5416996e0dd9470b371f92"
+phpstorm_version: "PhpStorm-211.7628.25"
+phpstorm_download_url: "https://download-cdn.jetbrains.com/webide/PhpStorm-2021.1.4.tar.gz"
+phpstorm_checksum: "sha256:d4100d919715fb218e37cd7ea99cce51f7c22bc41406a7482fa2cabb04452a5d"
 phpstorm_path: "{{ home_directory }}/.phpstorm"
 phpstorm_bin: "{{ phpstorm_path }}/{{ phpstorm_version }}/bin/phpstorm.sh"
